@@ -1,3 +1,8 @@
+2006-04-11  Chris Lumens  <clumens@redhat.com>
+
+	* pykickstart/parser.py (KickstartParser.addPackages):  Ignore
+	whitespace before group names (#188095).
+
 2006-03-27  Chris Lumens  <clumens@redhat.com>
 
 	* pykickstart.spec, setup.py:  Bump version.
